static/psi4manual/1.3.2/_sources/api/psi4.core.BasisSet.rst.txt
BasisSet
========

.. currentmodule:: psi4.core

.. autoclass:: BasisSet
   :show-inheritance:

   .. rubric:: Methods Summary

   .. autosummary::

      ~BasisSet.ao_to_shell
      ~BasisSet.blend
      ~BasisSet.build
      ~BasisSet.construct_from_pydict
      ~BasisSet.function_to_center
      ~BasisSet.function_to_shell
      ~BasisSet.genbas
      ~BasisSet.has_ECP
      ~BasisSet.has_puream
      ~BasisSet.make_filename
      ~BasisSet.max_am
      ~BasisSet.max_function_per_shell
      ~BasisSet.max_nprimitive
      ~BasisSet.molecule
      ~BasisSet.move_atom
      ~BasisSet.n_ecp_core
      ~BasisSet.n_frozen_core
      ~BasisSet.name
      ~BasisSet.nao
      ~BasisSet.nbf
      ~BasisSet.nprimitive
      ~BasisSet.nshell
      ~BasisSet.nshell_on_center
      ~BasisSet.print_detail_out
      ~BasisSet.print_out
      ~BasisSet.shell
      ~BasisSet.shell_to_ao_function
      ~BasisSet.shell_to_basis_function
      ~BasisSet.shell_to_center
      ~BasisSet.zero_ao_basis_set

   .. rubric:: Methods Documentation

   .. automethod:: ao_to_shell
   .. automethod:: blend
   .. automethod:: build
   .. automethod:: construct_from_pydict
   .. automethod:: function_to_center
   .. automethod:: function_to_shell
   .. automethod:: genbas
   .. automethod:: has_ECP
   .. automethod:: has_puream
   .. automethod:: make_filename
   .. automethod:: max_am
   .. automethod:: max_function_per_shell
   .. automethod:: max_nprimitive
   .. automethod:: molecule
   .. automethod:: move_atom
   .. automethod:: n_ecp_core
   .. automethod:: n_frozen_core
   .. automethod:: name
   .. automethod:: nao
   .. automethod:: nbf
   .. automethod:: nprimitive
   .. automethod:: nshell
   .. automethod:: nshell_on_center
   .. automethod:: print_detail_out
   .. automethod:: print_out
   .. automethod:: shell
   .. automethod:: shell_to_ao_function
   .. automethod:: shell_to_basis_function
   .. automethod:: shell_to_center
   .. automethod:: zero_ao_basis_set
